# tk

./: .gitignore  .gitmodules  :w:w  CMakeLists.txt  LICENSE  README.md  ReadMe  build.cmd  build.sh  imgui.cpp  tmp
.cache/clangd/index/: ErrorHandling.hpp.7FA82781DA1B81A6.idx  GraphicsEngine.cpp.9D1D14F3B56CFB67.idx  GraphicsEngine.hpp.6E5D488DBF3CE07D.idx  Window.cpp.38B943EA306FAF4B.idx  Window.hpp.225FA6B3C6DF4291.idx  initialize.cpp.8F3853EC4BF5F10C.idx  main.cpp.E5BABE3F15CC6F04.idx
example/: CMakeLists.txt  PlayBackButton.hpp  main.cpp
include/: DestructorStack.hpp  ErrorHandling.hpp  GraphicsEngine.hpp  Log.hpp  Window.hpp
include/GraphicsEngine/: Buffer.hpp  CommandPool.hpp  DescriptorAllocator.hpp  FrameResource.hpp  GraphicsEngine.hpp  Image.hpp  MaterialLibrary.hpp  MemoryAllocator.hpp  Painter.hpp  PipelineBuilder.hpp  Shape.hpp  Window.hpp  gltf.hpp
include/UI/: UI.hpp
include/tk/: Log.hpp  Window.hpp  config.hpp  log.hpp  tk.hpp  type.hpp  ui.hpp  util.hpp
include/tk/GraphicsEngine/: CommandPool.hpp  Descriptor.hpp  DescriptorLayout.hpp  Device.hpp  Features.hpp  FrameResources.hpp  GraphicsEngine.hpp  MaterialLibrary.hpp  MemoryAllocator.hpp  Painter.hpp  Pipeline.hpp  PipelineBuilder.hpp  PipelineLayout.hpp  RenderPipeline.hpp  Shader.hpp  Swapchain.hpp  TextEngine.hpp  config.hpp  types.hpp  vk_extension.hpp
include/tk/GraphicsEngine/Pipeline/: GraphicsPipeline.hpp
include/tk/GraphicsEngine/TextEngine/: TextEngine.hpp
include/tk/UI/: UI.hpp
include/tk/audio/: Audio.hpp
include/tk/ui/: Font.hpp  Layout.hpp  LerpPoint.hpp  UIWidget.hpp  ui.hpp
include/tk/ui/widgets/: ClickableWidget.hpp  Line.hpp  UIWidget.hpp
interface/tk/: log.hpp  tk.hpp  type.hpp
interface/tk/ui/: LerpPoint.hpp  ui.hpp
msic/: smaa.h
shader/: 2D.frag  2D.h  2D.vert  AAA.frag  AAA.h  AAA.vert  SDF.frag  SDF.h  SDF.vert  SDFAA.comp  SDFAA.frag  SDFAA.h  SDFAA.vert  SMAA.h  SMAA.hlsl  SMAA_blend_weight.comp  SMAA_blend_weight.frag  SMAA_blend_weight.vert  SMAA_edge_detection.comp  SMAA_edge_detection.frag  SMAA_edge_detection.h  SMAA_edge_detection.vert  SMAA_neighbor.comp  SMAA_neighbor.frag  SMAA_neighbor.vert  compute.glsl  fragment.glsl  gradient_color.comp  old-SDF.frag  old-SDF.vert  smaa_comp.h  text_mask.frag  text_mask.h  text_mask.vert  text_render.frag  text_render.h  text_render.vert  text_rendering.frag  text_rendering.vert  triangle.frag  (+4 more)
src/: DestructorStack.hpp  ErrorHandling.hpp  Window.cpp  Window.hpp  main.cpp  tk.cpp  ui.cpp  util.cpp
src/GraphicsEngine/: CommandPool.cpp  Descriptor.cpp  DescriptorLayout.cpp  Device.cpp  Features.hpp  FrameResources.cpp  FrameResources.hpp  GraphicsEngine.hpp  MaterialLibrary.cpp  MemoryAllocator.cpp  Painter.cpp  Pipeline.cpp  PipelineBuilder.cpp  PipelineLayout.cpp  RenderPipeline.cpp  Shader.cpp  ShaderStructs.hpp  Swapchain.cpp  TextEngine.cpp  Window.cpp  constant.hpp  draw.cpp  font.cpp  gltf.cpp  imgui.cpp  init-graphics-pipeline.cpp  init-util.hpp  init.cpp  load_gltf.cpp  run.cpp  util.cpp  vk_extension.cpp  vk_extension_funcs.cpp
src/GraphicsEngine/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.hpp
src/GraphicsEngine/TextEngine/: TextEngine.cpp  TextEngine.hpp  font.cpp  missing-glyph-sdf-bitmap.hpp
src/UI/: UI.cpp
src/audio/: audio.cpp
src/tk/: Window.cpp
src/tk/GraphicsEngine/: CommandPool.cpp  PipelineBuilder.cpp  draw.cpp  init.cpp
src/tk/UI/: UI.cpp
src/ui/: Font.cpp  LerpPoint.cpp  UIWidget.cpp  event_process.cpp  internal.hpp  ui.cpp
src/ui/widgets/: ClickableWidget.cpp  UIWidget.cpp
